# td_env

./: .gitlab-ci.yml  Dockerfile  README.md  _config.yml  update_env.md
conda/: build-gpu.sh  build-nersc.sh  condalist_gpu.txt  install-from-lock.sh  install-mpich.sh  install-nersc.sh  install-sn-env.sh  install.sh  packlist.txt  piplist.txt  piplist_gpu.txt  post-build.sh  post-conda-build.sh  set-symlinks.sh  sn-env-addtolsst-packlist.txt  sn-env-nersc-nobuildinfo.yml  sn-env-setup.sh  sn-env.yml  td_env-lock.yml  test-nersc.sh  update-docker.sh  update_package_setup.sh
conda/lock/: environment.yml  pyproject.toml
conda/lock/auto/: td_env-lock-first.yml  td_env-lock-main-2026-03-02.yml  td_env-lock-main-2026-03-03.yml  td_env-lock-main-2026-03-17.yml  td_env-lock-main-2026-03-22.yml  td_env-lock-main-2026-03-29.yml  td_env-lock-main-2026-04-05.yml  td_env-lock-main-2026-04-07.yml  td_env-lock-main-2026-04-10.yml  td_env-lock-main-2026-04-12.yml  td_env-lock-main-2026-04-15.yml  td_env-lock-main-2026-04-19.yml  td_env-lock-main-2026-04-26.yml  td_env-lock-main-2026-05-17.yml  td_env-lock-main-2026-05-24.yml  td_env-lock-main-2026-05-28.yml  td_env-lock-main-2026-05-31.yml  td_env-lock-main-2026-06-07.yml  td_env-lock-main-2026-06-14.yml  td_env-lock-main-2026-06-21.yml  td_env-lock-main-2026-06-28.yml
docker/: add-gpu-env.sh  install-gpu-td-env.sh  install-mpich-for-gpu.sh  install-mpich.sh  update-docker.sh
nersc/: setup_sn_all.sh  setup_sn_all_test.sh  setup_sn_env.sh  setup_sn_some.sh  setup_td.sh  setup_td_dev.sh  setup_td_env.sh  setup_td_int.sh  (+6 more)
(+22 files in other folders)
