# pyproject.toml

[project]
name = "poetry-demo"
version = "0.1.0"
description = ""


platforms = [
    'linux-64'
]
[tool.poetry]
packages = [
    { include = "resspect" },
]

[tool.poetry.dependencies]
resspect = {url = "https://github.com/LSSTDESC/resspect/archive/master.tar.gz"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

